// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can switch the order of the coordinates 1`] = `
<div>
  30, -90
</div>
`;

exports[`renders a placeholder while waiting 1`] = `
<div>
  locating…
</div>
`;

exports[`renders the returned coordinates 1`] = `
<div>
  -90, 30
</div>
`;
